--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ aws-sdk-sts = "=1.49.0"
 aws-sdk-ssooidc = "=1.50.0"
 dotenv = "0.15.0"
 tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [build-dependencies]
 rustc_version = "0.4.0"
