--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ dotenv = "0.15.0"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+zerofrom = "=0.1.5"
+litemap = "=0.7.4"
 
 [build-dependencies]
 rustc_version = "0.4.0"
